# gantt

./: README.md  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs
src/components/: ColorPicker.css  ColorPicker.tsx  EditableText.css  EditableText.tsx  EntryList.css  EntryList.tsx  EntryRow.css  EntryRow.tsx  GanttChart.css  GanttChart.tsx  Period.css  Period.tsx  TimelineBody.css  TimelineBody.tsx  TimelineHeader.css  TimelineHeader.tsx  Toolbar.css  Toolbar.tsx
src/hooks/: useEntries.ts  usePointerDrag.ts
src/lib/: api.ts  constants.ts  date.ts  sort.ts  types.ts
src/styles/: base.css  tokens.css
