[package]
name = "gantt-chart"
version = "0.1.0"
description = "Personal Gantt chart"
edition = "2021"

[lib]
name = "gantt_chart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
directories = "5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
